samples/_failures_safe/1761490255_67a9a5_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_253e7b5d.c: In function ‘main’:
./samples/SAFE/__tmp_253e7b5d.c:164:5: error: expected declaration or statement at end of input
  164 |     graph.edges[4].dest = 4;
      |     ^~~~~
